--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.2.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
@@ -20,6 +20,8 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "peer": "^0.2.10",
+        "vue-router": "^3.0.2",
         "vuetify": "^1.3.15"
     }
 }
