--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "peer": "^0.2.10",
         "vue-router": "^3.0.2",
+        "vue-simplemde": "^0.5.1",
         "vuetify": "^1.4.0"
     }
 }
